# RFID-based-student-attendence-system-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rfid_system.pro
.github/: CONTRIBUTING.md
hardware/: hardware.ino
src/: AttendancePage.cpp  AttendancePage.h  CafeteriaPage.cpp  CafeteriaPage.h  DashboardPage.cpp  DashboardPage.h  LoginPage.cpp  LoginPage.h  MainWindow.cpp  MainWindow.h  OverviewPage.cpp  OverviewPage.h  RegisterCardPage.cpp  RegisterCardPage.h  ReportsPage.cpp  ReportsPage.h  ScanTerminalPage.cpp  ScanTerminalPage.h  SerialManager.h  SerialMangaer.cpp  StudentsPage.cpp  StudentsPage.h  main.cpp
ui/: AttendancePage.ui  CafeteriaPage.ui  DashboardPage.ui  LoginPage.ui  OverviewPage.ui  RegisterCardPage.ui  ReportsPage.ui  ScanTerminalPage.ui  StudentsPage.ui
